# SomeAgents

./: .env.example  LICENSE  gemini.md  pyproject.toml  readme.md
_backup_configs/: pyproject.toml
deep_research/: deep_research.py  pyproject.toml  readme.md
engineering_team/: README.md  pyproject.toml
engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
engineering_teem/: .gitignore
engineering_teem/src/engineering_team/: main.py
stock_picker/: .gitignore  README.md
